--- a/deportivos.css
+++ b/deportivos.css
@@ -28,14 +28,14 @@ main {
 
 .p {
     background: #ffffff9a;
-    margin: 10px 0; /* Ajusta el margen superior e inferior */
-    padding: 10px; /* Aumenta el padding para mayor espacio interno */
+    margin: 10px 0;  
+    padding: 10px; 
     border: 1px solid #ddd;
     border-radius: 3px;
     font-family: 'Times New Roman', Times, serif;
     color: #000000;
-    font-size: 1em; /* Ajusta el tamaño de la fuente */
-    line-height: 1.5; /* Mejora la legibilidad */
+    font-size: 1em; 
+    line-height: 1.5; 
 }
 
 .producto {
@@ -44,6 +44,7 @@ main {
     padding: 15px;
     border: 1px solid #ddd;
     border-radius: 3px;
+    whidth:100%;
 }
 
 footer {
@@ -61,6 +62,6 @@ footer {
 
 .img {
     width: 400px;
-    display: block; /* Cambia a block para que ocupe el ancho completo */
-    margin: 0 auto; /* Centra la imagen */
+    display: block;  
+    margin: 0 auto;  
 }
