--- a/deportivos.css
+++ b/deportivos.css
@@ -6,9 +6,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(FondoDep.png);
+    background-color:white;
     background-size: cover;
     background-position: center;
+    
 }
 
 header {
