--- a/deportivos.css
+++ b/deportivos.css
@@ -6,7 +6,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:white;
+    background-image:FondoDep.png;
     background-size: cover;
     background-position: center;
     
